# Axum-Rust

./: Cargo.toml  README.md
config/: config.yaml
src/: config.rs  logging.rs  main.rs  middleware.rs
src/controller/: controller.rs
src/database/: mongo.rs
src/routes/: routes.rs
