[package]
name = "axum-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
mongodb = "2.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bson = "2.0"
tower = "0.4.13"
serde_json = "1.0"
futures-util = "0.3.21"
